# Eisenhower

./: .gitignore  README.md  README_NEW.md  README_old.md  TODO.md  TODO_COMPLETED.md  TODO_original.md  docker-compose-simple.yml  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py  main_new.py  security_new.py  security_old.py  settings.py  start.py
backend/app/models/: task.py  user.py
backend/app/routers/: auth.py  config.py  tasks.py
backend/app/schemas/: task.py  user.py
backend/tests/: conftest.py  test_api.py  test_priority.py
frontend/: Dockerfile  package.json  sanitize.js
frontend/public/: index.html
frontend/src/: App.css  App.js  reportWebVitals.js
frontend/src/components/: AuthPanel.js  EisenhowerMatrix.js  TaskForm.js  TaskList.js
frontend/src/services/: api.js
nginx/: Dockerfile  default.conf
